--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 //    implementation 'com.android.support:recyclerview-v7:27.1.1'
 
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1" // use kapt for Kotlin
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
