--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LockActivity"></activity>
+        <activity android:name=".LockActivity" />
+        <activity android:name=".TaskListActivity" />
+        <activity android:name=".CreateTaskActivity"></activity>
     </application>
 
 </manifest>
