--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".LockActivity" />
         <activity android:name=".TaskListActivity" />
-        <activity android:name=".CreateTaskActivity"></activity>
+        <activity android:name=".CreateTaskActivity"/>
+        <activity android:name=".EditTaskActivity"/>
     </application>
 
 </manifest>
